--- a/app/client-component/nav-bar/nav.css
+++ b/app/client-component/nav-bar/nav.css
@@ -18,7 +18,7 @@
   .logo span {
     height: 15px;
     aspect-ratio: 1/1;
-    background-color: #fff;
+    background-color: rgb(35, 35, 255);
     display: block;
     border-radius: 100%;
     opacity: 0.5;
@@ -51,13 +51,14 @@
   
   .nav-menu {
     display: flex;
+    gap: 1rem;
     z-index: 20;
   }
   
   .nav-menu > a {
-    color: #fff;
-    font-weight: 400;
-    font-size: 17px;
+    color: #313131;
+    font-weight: 500;
+    font-size: 14px;
     padding: 0.5rem 1.2rem;
     border-radius: 0.2rem;
     transition: all 0.1s ease;
@@ -69,15 +70,15 @@
   
   .menu-button > .contact-button {
     color: #fff;
-    padding: 0.5rem 1.7rem;
-    border: 1px solid #fff;
-    border-radius: 0.2rem;
+    padding: 0.7rem 1.7rem;
+    background-color: rgb(35, 35, 255);
+    border-radius: 1rem;
     transition: all 0.15s ease;
+    font-weight: 500;
   }
   
   .menu-button > .contact-button:hover {
-    background-color: #fff;
-    color: #000;
+    background-color: rgb(49, 49, 255);
     cursor: pointer;
   }
   
