--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 *{
   padding: 0;
   margin: 0;
@@ -8,15 +12,16 @@
 }
 html {
   scroll-behavior: smooth;
+  font-size: 14px;
 }
 
 body{
-  background: radial-gradient(circle, #7BB7FF, #5ba5ff);
+  /* background: radial-gradient(circle, #7BB7FF, #5ba5ff); */
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 .container{
-  width: 1500px;
+  width: 1280px;
   margin: auto;
 }
 
