--- a/app/server-component/reviews/review/review.css
+++ b/app/server-component/reviews/review/review.css
@@ -1,5 +1,5 @@
 .review{
-    background-color: #92C9FF;
+    /* background-color: rgb(36, 36, 222);; */
     padding: 2rem;
     border-radius: 0.5rem;
     display: flex;
@@ -7,12 +7,14 @@
     gap: 2rem;
 }
 .review .reviewHeader{
-    color: #fff;
-    font-weight: 500;
+    color: rgb(4, 4, 33);;
+    font-weight: 600;
+    font-size:1.2rem;
 }
 .review .reviewDesc{
     line-height: 27px;
-    color: #252525;
+    font-weight: 500;
+    color: #6d6d6d;
 }
 .reviewFooter{
     display: flex;
@@ -40,11 +42,9 @@
 }
 .reviewStar{
     display: flex;
-    gap: 0.5rem;
+    gap: 0.2rem;
 }
 .star{
-    fill: #E9F7FF;
-}
-.reviewerAvatar img{
-   
+    width: 1.3rem;
+    fill: rgb(36, 36, 222);;
 }
