--- a/app/server-component/section-heading/section-heading.css
+++ b/app/server-component/section-heading/section-heading.css
@@ -4,8 +4,8 @@
     align-items: center;
 }
 .sectionHeading > h1{
-    font-weight: 500;
-    color: #fff;
+    font-weight: 600;
+    color: #0a062d;
     text-transform: uppercase;
 }
 .sectionHeading > span{
