--- a/app/server-component/services/service/service.css
+++ b/app/server-component/services/service/service.css
@@ -1,58 +1,45 @@
 .service{
     /* width: 20rem; */
-    background-color: #92C9FF;
+    /* background-color: #92C9FF; */
+    /* border: 1px solid #c5e2ff; */
     padding: 2.5rem 1.5rem;
     border-radius: 0.4rem;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-    align-items: center;
-    text-align: center;
+    gap: 1rem;
+    /* align-items: center; */
+    /* text-align: center; */
     transition: all .2s ease;
-    border: 1px solid #c5e2ff;
     opacity: 0;
 }
-.service:nth-child(odd) .service-icon{
-    background-color: #eaf5ff;
-}
-.service:hover{
-    background-color: #9fcfff;
-}
-.service:hover .service-icon{
-    background-color: #ffffff;
-}
+
 .service-icon{
-    width: 5rem;
-    height: 5rem;
-    background-color: #dfefff;
+    height: 3rem;
+    /* background-color: #dfefff; */
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
     box-sizing: border-box;
     transition: all .2s ease;
 }
 .service-icon > img{
-    width: 100%;
+    height: 100%;
 }
 .service-info{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .5rem;
 }
 .service-info > h2{
     color: #323139;
     font-weight: 500;
-    font-size: 23px;
-    font-weight: 500;
-    line-height: 35px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 27px;
 }
 .service-info > p{
-    font-size: 17px;
-    color: #424649;
-    font-weight: 400;
-    line-height: 27px;
+    font-size: 14px;
+    color: #7b7b7b;
+    font-weight: 500;
+    line-height: 25px;
 }
 .service button{
     width: 100%;
