--- a/app/server-component/portfolios/portfolio/portfolio.css
+++ b/app/server-component/portfolios/portfolio/portfolio.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     gap: .7rem;
-    border: 1px solid #e4f0ff;
     opacity: 0;
 }
 .portfolio > .thumbnail{
@@ -24,9 +23,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    /* padding: 1rem; */
 }
-.portfolio-info > span{
+/* .portfolio-info > span{
     color:rgb(36, 36, 222);;
     background-color: rgb(233, 233, 255);;
     padding: 0.5rem 1rem;
@@ -34,11 +33,8 @@
     width: fit-content;
     font-size: .8rem;
     font-weight: 600;
-}
-.portfolio-info > p{
-    color: #424649;
-    line-height: 27px;
-}
+} */
+
 
 @keyframes portfolioAnimation {
     0% {
