--- a/app/server-component/portfolios/portfolios.css
+++ b/app/server-component/portfolios/portfolios.css
@@ -3,7 +3,8 @@
 }
 .portfoliosWrapper{
     display: grid;
-    gap: 1rem;
+    gap: 1.5rem;
+    row-gap: 3rem;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     margin-top: 2rem;
 }
