--- a/app/client-component/nav-bar/nav.css
+++ b/app/client-component/nav-bar/nav.css
@@ -1,6 +1,6 @@
 .nav {
     position: sticky;
-    padding: 1rem 0;
+    top: 0;
     z-index: 1;
   }
   
@@ -70,7 +70,7 @@
   
   .menu-button > .contact-button {
     color: #fff;
-    padding: 0.7rem 1.7rem;
+    padding: 1rem 1.7rem;
     background-color: rgb(35, 35, 255);
     border-radius: 1rem;
     font-weight: 500;
