--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
@@ -18,7 +19,9 @@ html {
 body{
   /* background: radial-gradient(circle, #7BB7FF, #5ba5ff); */
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'SF Pro Display', sans-serif;
+                                                
 }
 .container{
   width: 1280px;
