--- a/app/client-component/nav-bar/nav.css
+++ b/app/client-component/nav-bar/nav.css
@@ -18,11 +18,11 @@
   .logo span {
     height: 15px;
     aspect-ratio: 1/1;
-    background-color: rgb(35, 35, 255);
+    background-color: #2424de;
     display: block;
     border-radius: 100%;
-    opacity: 0.5;
-    animation: logoAnimation 1s ease-in-out infinite;
+    opacity: 1;
+    /* animation: logoAnimation 1s ease-in-out infinite; */
   }
   
   .logo span:nth-child(1) {
@@ -30,22 +30,25 @@
   }
   
   .logo span:nth-child(2) {
-    animation: logoAnimation 1s ease-in-out 0.1s infinite;
+    animation: logoAnimation 1s ease-in-out 0.2s infinite;
   }
   
   .logo span:nth-child(3) {
-    animation: logoAnimation 1s ease-in-out 0.2s infinite;
+    animation: logoAnimation 1s ease-in-out 0.4s infinite;
   }
   
   @keyframes logoAnimation {
     0% {
-      opacity: 0.2;
+      opacity: .5;
+      scale: 0.3;
     }
     50% {
       opacity: 1;
+      scale: 1;
     }
     100% {
-      opacity: 0.2;
+      opacity: .5;
+      scale: 0.3;
     }
   }
   
@@ -56,8 +59,8 @@
   }
   
   .nav-menu > a {
-    color: #313131;
-    font-weight: 500;
+    color: #17161f;
+    font-weight: 600;
     font-size: 14px;
     padding: 0.5rem 1.2rem;
     border-radius: 0.2rem;
@@ -65,7 +68,7 @@
   }
   
   .nav-menu > a:hover {
-    background-color: #abd5ff;
+    color: #2424de;
   }
   
   .menu-button > .contact-button {
